--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-slick": "0.24.0"
+    "react-slick": "0.24.0",
+    "slick-carousel": "1.8.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.4",
