--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
+    "react-router-dom": "5.0.1",
     "react-slick": "0.24.0",
     "slick-carousel": "1.8.1"
   },
